--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "dotenv": "^17.2.1",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
